--- a/.github/workflows/jarvis.yml
+++ b/.github/workflows/jarvis.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
     - name: get jarvis
       uses: actions/checkout@v4
       with:
