--- a/.github/workflows/jarvis.yml
+++ b/.github/workflows/jarvis.yml
@@ -9,9 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
     - name: get jarvis
       uses: actions/checkout@v4
       with:
@@ -21,10 +18,6 @@ jobs:
       run: |
         cd jarvis-cd && \
         pip install -e . -r requirements.txt
-        set
         which jarvis
-        javris
-    - name: test jarvis
-      run: |
-        which jarvis
-        javris
+        # javris # Doesn't work
+        /home/runner/.local/bin/jarvis
