ci(jarvis): test full

--- a/.github/workflows/jarvis.yml
+++ b/.github/workflows/jarvis.yml
@@ -20,5 +20,4 @@ jobs:
         pip install -e . -r requirements.txt
         which jarvis
         # javris # Doesn't work
-        # /home/runner/.local/bin/jarvis # Work
-        python -m jarvis
+        /home/runner/.local/bin/jarvis # Work
