--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -31,12 +31,12 @@ jobs:
             make
             make install
             cd ..
-            curl -s -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-            gtar zxf snapshot-1.14.tar.gz
-            cd hdf5-snapshot-1.14
+            curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz 
+            gtar zxf snapshot-1.14.5.tar.gz
+            cd hdf5-snapshot-1.14.5-2
             mkdir build
             cd build
             ls -l /tmp/bin
-            /tmp/bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+            /tmp/bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
             /tmp/bin/ctest -D Experimental -C Release
 
