--- a/.github/workflows/sol-auto.yml
+++ b/.github/workflows/sol-auto.yml
@@ -2,7 +2,7 @@ name: sol auto gcc
 
 on:
   push:
-    branches: main-
+    branches: main
 
 defaults:
   run:
@@ -25,7 +25,7 @@ jobs:
             set -e
             curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz 
             gtar zxf snapshot-1.14.5.tar.gz
-            cd hdf5-snapshot-1.14.5-2
+            cd hdf5-1.14.5-2
             ./configure CC=gcc CXX=g++
             make
             make check
