--- a/.github/workflows/obsd.yml
+++ b/.github/workflows/obsd.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
           tar zxf snapshot-1.14.5.tar.gz
-          cd hdf5-snapshot-1.14.5-2
+          cd hdf5-1.14.5-2
           mkdir build
           cd build
           cmake -DSITE:STRING="obsd-7.5" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
