--- a/.github/workflows/arm64-nbsd.yml
+++ b/.github/workflows/arm64-nbsd.yml
@@ -2,7 +2,7 @@ name: arm64 nbsd
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main- ]
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -44,7 +44,7 @@ jobs:
             cd build
             cmake \
             -DSITE:STRING="nbsd-${{ matrix.os.version }}.${{ matrix.os.architecture }}" \
-            -DBUILDNAME:STRING="4/r" \
+            -DBUILDNAME:STRING="5/r" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
