--- a/.github/workflows/obsd.yml
+++ b/.github/workflows/obsd.yml
@@ -2,7 +2,7 @@ name: obsd
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   test:
@@ -27,5 +27,5 @@ jobs:
           cd hdf5-1.14.5-2
           mkdir build
           cd build
-          cmake -DSITE:STRING="obsd-7.5" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING="obsd-7.5" -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Release
