--- a/.github/workflows/mac13.yml
+++ b/.github/workflows/mac13.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: test
         run: |
+          brew install ninja
           curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
           tar zxf snapshot-1.14.5.tar.gz
           cd hdf5-1.14.5-2          
