--- a/.github/workflows/wsl-deb.yml
+++ b/.github/workflows/wsl-deb.yml
@@ -3,7 +3,7 @@ name: wsl deb
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     strategy:
@@ -25,10 +25,10 @@ jobs:
             ca-certificates
       - name: test
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxf snapshot-1.14.tar.gz
-          cd hdf5-snapshot-1.14	  
+          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+          tar zxf snapshot-1.14.5.tar.gz
+          cd hdf5-1.14.5-2        
           mkdir build
           cd build
-          cmake -DSITE:STRING="deb" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING="deb" -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Release
