--- a/.github/workflows/arm64-auto.yml
+++ b/.github/workflows/arm64-auto.yml
@@ -1,4 +1,4 @@
-name: arm64 auto
+name: arm64 auto hdf4
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.22.0
+        uses: cross-platform-actions/action@v0.25.0
         env:
           FOO: A
           BAR: B
