--- a/.github/workflows/mac12-d.yml
+++ b/.github/workflows/mac12-d.yml
@@ -2,7 +2,7 @@ name: mac-12 d
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   build:
@@ -11,9 +11,9 @@ jobs:
     steps:
       - name: test
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxf snapshot-1.14.tar.gz
-          cd hdf5-snapshot-1.14
+          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+          tar zxvf snapshot-1.14.5.tar.gz
+          cd hdf5-1.14.5-2
           mkdir build
           cd build
           cmake -DSITE:STRING="mac-12" -DBUILDNAME:STRING="4/4" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
