--- a/.github/workflows/nbsd-9.3.yml
+++ b/.github/workflows/nbsd-9.3.yml
@@ -2,7 +2,7 @@ name: nbsd-9.3
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.23.0
+        uses: cross-platform-actions/action@v0.25.0
         with:
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
@@ -32,14 +32,14 @@ jobs:
             sudo pkgin -y install mozilla-rootcerts
             sudo pkgin -y install mozilla-rootcerts-openssl
             export LD_LIBRARY_PATH=/usr/pkg/lib
-            curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-            tar zxvf snapshot-1.14.tar.gz
-            cd hdf5-snapshot-1.14
+            curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+            tar zxvf snapshot-1.14.5.tar.gz
+            cd hdf5-1.14.5-2
             mkdir build
             cd build
             cmake \
             -DSITE:STRING="nbsd-${{ matrix.os.version }}.${{ matrix.os.architecture }}" \
-            -DBUILDNAME:STRING="4/r" \
+            -DBUILDNAME:STRING="5/r" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
