--- a/.github/workflows/nbsd.yml
+++ b/.github/workflows/nbsd.yml
@@ -2,7 +2,7 @@ name: nbsd
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -37,9 +37,9 @@ jobs:
             sudo pkgin -y install mozilla-rootcerts
             sudo pkgin -y install mozilla-rootcerts-openssl
             export LD_LIBRARY_PATH=/usr/pkg/lib
-            curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-            tar zxvf snapshot-1.14.tar.gz
-            cd hdf5-snapshot-1.14
+            curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+            tar zxvf snapshot-1.14.5.tar.gz
+            cd hdf5-1.14.5-2	    
             mkdir build
             cd build
             cmake \
