--- a/.github/workflows/obsd-7.4-auto.yml
+++ b/.github/workflows/obsd-7.4-auto.yml
@@ -2,7 +2,7 @@ name: obsd-7.4 auto
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -18,7 +18,7 @@ jobs:
             host: ubuntu-latest
     steps:
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.23.0
+        uses: cross-platform-actions/action@v0.25.0
         with:
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
@@ -32,9 +32,9 @@ jobs:
             export AUTOCONF_VERSION=2.71
             export AUTOMAKE_VERSION=1.16
             export HDF5_LIBTOOL=/usr/local/bin/libtoolize
-            curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-            tar zxf snapshot-1.14.tar.gz
-            cd hdf5-snapshot-1.14	    
+            curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+            tar zxvf snapshot-1.14.5.tar.gz
+            cd hdf5-1.14.5-2
             ./configure --prefix=/tmp --enable-build-mode=production
             make
             make check
