--- a/.github/workflows/obsd-d.yml
+++ b/.github/workflows/obsd-d.yml
@@ -2,7 +2,7 @@ name: obsd d
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
@@ -18,10 +18,10 @@ jobs:
           pkg_add curl
           pkg_add cmake
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxf snapshot-1.14.tar.gz
-          cd hdf5-snapshot-1.14
+          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+          tar zxvf snapshot-1.14.5.tar.gz
+          cd hdf5-1.14.5-2
           mkdir build
           cd build
-          cmake -DSITE:STRING="obsd-7.5" -DBUILDNAME:STRING="4/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING="obsd" -DBUILDNAME:STRING="5/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Debug
