--- a/.github/workflows/win19.yml
+++ b/.github/workflows/win19.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - name: get
         run: |
-          curl -s -O -L  https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.zip
-          unzip -q snapshot-1.14.zip
+          curl -s -O -L  https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.zip
+          unzip -q snapshot-1.14.5.zip	
       - name: test
         run: |
-          cd  hdf5-snapshot-1.14
+          cd  hdf5-1.14.5-2
           mkdir build
           cd build
-          cmake -DSITE:STRING=win19 -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING=win19 -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Release
