--- a/.github/workflows/wsl-kali.yml
+++ b/.github/workflows/wsl-kali.yml
@@ -4,7 +4,7 @@ name: wsl kali
 on:
   push:
     branches:
-      - main-
+      - main
 
 
 jobs:
@@ -27,10 +27,10 @@ jobs:
             build-essential
       - name: Run the script
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxf snapshot-1.14.tar.gz
-          cd hdf5-snapshot-1.14	  
+          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+          tar zxvf snapshot-1.14.5.tar.gz
+          cd hdf5-1.14.5-2
           mkdir build
           cd build
-          cmake -DSITE:STRING="kali" -DBUILDNAME:STRING="4" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING="kali/wsl" -DBUILDNAME:STRING="4" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental
