--- a/.github/workflows/wsl-suse-15.2.yml
+++ b/.github/workflows/wsl-suse-15.2.yml
@@ -3,7 +3,7 @@ name: wsl suse-15.2
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -27,11 +27,11 @@ jobs:
           curl -O https://cmake.org/files/v3.18/cmake-3.18.0-Linux-x86_64.sh
           chmod u+x ./cmake-3.18.0-Linux-x86_64.sh 
           ./cmake-3.18.0-Linux-x86_64.sh --skip-license
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxf snapshot-1.14.tar.gz
-          cd hdf5-snapshot-1.14
+          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+          tar zxvf snapshot-1.14.5.tar.gz
+          cd hdf5-1.14.5-2	  
           mkdir build
           cd build
-          /mnt/d/a/actions/actions/bin/cmake -DSITE:STRING="sus-15.2" -DBUILDNAME:STRING="cmake-3.18" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          /mnt/d/a/actions/actions/bin/cmake -DSITE:STRING="sus-15.2/wsl" -DBUILDNAME:STRING="cmake-3.18" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
 #          /mnt/d/a/actions/actions/bin/ctest -T Build
 #          /mnt/d/a/actions/actions/bin/ctest -T Test
