--- a/.github/workflows/mac12-d.yml
+++ b/.github/workflows/mac12-d.yml
@@ -16,5 +16,5 @@ jobs:
           cd hdf5-1.14.5-2
           mkdir build
           cd build
-          cmake -DSITE:STRING="mac-12" -DBUILDNAME:STRING="4/4" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING="mac12" -DBUILDNAME:STRING="5/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Debug
