--- a/.github/workflows/nbsd-9.3.yml
+++ b/.github/workflows/nbsd-9.3.yml
@@ -38,7 +38,7 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DSITE:STRING="nbsd-${{ matrix.os.version }}.${{ matrix.os.architecture }}" \
+            -DSITE:STRING="nbsd9" \
             -DBUILDNAME:STRING="5/r" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
