--- a/.github/workflows/wsl-suse-15.2.yml
+++ b/.github/workflows/wsl-suse-15.2.yml
@@ -32,6 +32,8 @@ jobs:
           cd hdf5-1.14.5-2	  
           mkdir build
           cd build
-          /mnt/d/a/actions/actions/bin/cmake -DSITE:STRING="sus-15.2/wsl" -DBUILDNAME:STRING="cmake-3.18" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          pwd
+          which cmake
+#           /mnt/d/a/actions/actions/bin/cmake -DSITE:STRING="sus-15.2/wsl" -DBUILDNAME:STRING="cmake-3.18" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
 #          /mnt/d/a/actions/actions/bin/ctest -T Build
 #          /mnt/d/a/actions/actions/bin/ctest -T Test
