--- a/.github/workflows/win-msi.yml
+++ b/.github/workflows/win-msi.yml
@@ -18,7 +18,7 @@ jobs:
            curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5-win-vs2022_intel.msi
       - name: Install MSI
         run: msiexec /i snapshot-1.14.5-win-vs2022_intel.msi /qb
+      - name: Test h5ls
+        run: "c:/Program Files/HDF_Group/HDF5/1.14.5/bin/h5ls.exe"
       - name: Uninstall MSI
         run: msiexec /x snapshot-1.14.5-win-vs2022_intel.msi /qb
-      - name: Validate MSI
-        run: msival2 snapshot-1.14.5-win-vs2022_intel.msi
