--- a/.github/workflows/win-msi.yml
+++ b/.github/workflows/win-msi.yml
@@ -17,7 +17,7 @@ jobs:
           curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5-win-vs2022_intel.msi
       - name: Install MSI
         run: |
-          msiexec /i snapshot-1.14.5-win-vs2022_intel.msi /l*v test.log /qb
+          msiexec /i snapshot-1.14.5-win-vs2022_intel.msi /l*v 'D:\a\actions\actions\test.log' /qb
           type test.log
       - name: Test h5ls
         run: Start-Process -FilePath 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls.exe'
