--- a/.github/workflows/win-choco.yml
+++ b/.github/workflows/win-choco.yml
@@ -1,8 +1,8 @@
-name: win msi
+name: win choco
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test-msi:
@@ -17,11 +17,6 @@ jobs:
           curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5-win-vs2022_intel.msi
       - name: Install MSI
         run: |
-          $file = "snapshot-1.14.5-win-vs2022_intel.msi"
-          $log = "install.log"
-          $procMain = Start-Process "msiexec" "/i `"$file`" /qn /l*! `"$log`"" -NoNewWindow -PassThru
-          $procLog = Start-Process "powershell" "Get-Content -Path `"$log`" -Wait" -NoNewWindow -PassThru 
-          $procMain.WaitForExit()
-          $procLog.Kill()
+          choco install snapshot-1.14.5-win-vs2022_intel.msi -y
       - name: Test h5ls
         run: Start-Process -FilePath 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls.exe'
