ci(win,choco): dir

--- a/.github/workflows/win-choco.yml
+++ b/.github/workflows/win-choco.yml
@@ -15,8 +15,11 @@ jobs:
       - name: Get MSI
         run: |
           curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5-win-vs2022_intel.msi
+          dir
       - name: Install MSI
         run: |
+          pwd
+          dir
           choco install snapshot-1.14.5-win-vs2022_intel.msi -y
       - name: Test h5ls
         run: Start-Process -FilePath 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls.exe'
