--- a/.github/workflows/win-msi.yml
+++ b/.github/workflows/win-msi.yml
@@ -25,4 +25,9 @@ jobs:
           $procLog.Kill()
           dir 'C:\Program Files\'
       - name: Test h5ls
+        run: |
+          cd 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\'
+          dir
+          & '.\h5ls.exe\'
+      - name: Test h5ls
         run: Start-Process -FilePath 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls.exe'
