--- a/.github/workflows/win-msi.yml
+++ b/.github/workflows/win-msi.yml
@@ -9,9 +9,6 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Install WiX Toolset
-        run: |
-          choco install wixtoolset -y
       - name: Get MSI
         run: |
           curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5-win-vs2022_intel.msi
@@ -28,6 +25,6 @@ jobs:
         run: |
           cd 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\'
           dir
-          & '.\h5ls.exe\'
+          & '.\h5ls.exe'
       - name: Test h5ls
         run: Start-Process -FilePath 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls.exe'
