--- a/.github/workflows/win-msi.yml
+++ b/.github/workflows/win-msi.yml
@@ -25,6 +25,6 @@ jobs:
         run: |
           cd 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\'
           dir
-          & '.\h5ls.exe'
+          & '.\h5ls.exe -h'
       - name: Test h5ls
         run: Start-Process -FilePath 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls.exe'
