--- a/.github/workflows/wsl-suse-15.2-auto.yml
+++ b/.github/workflows/wsl-suse-15.2-auto.yml
@@ -3,7 +3,7 @@ name: wsl suse-15.2 auto
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -24,8 +24,8 @@ jobs:
             curl
       - name: build
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxf snapshot-1.14.tar.gz
-          cd hdf5-snapshot-1.14
+          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
+          tar zxvf snapshot-1.14.5.tar.gz
+          cd hdf5-1.14.5-2	
           ./configure
           make
