--- a/.github/workflows/lin-auto-icx2-f-p.yml
+++ b/.github/workflows/lin-auto-icx2-f-p.yml
@@ -18,7 +18,9 @@ jobs:
           rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           sudo add-apt-repository -y "deb https://apt.repos.intel.com/oneapi all main"
           sudo apt update
-          sudo apt install -y intel-oneapi-compiler-dpcpp-cpp    
+          sudo apt install -y intel-oneapi-compiler-dpcpp-cpp
+          sudo apt install -y intel-oneapi-compiler-fortran
+          sudo apt install -y intel-oneapi-mkl
       - name: mpi
         uses: mpi4py/setup-mpi@master
         with:
