--- a/.github/workflows/win19-msi-icx.yml
+++ b/.github/workflows/win19-msi-icx.yml
@@ -48,6 +48,7 @@ jobs:
           dir 'C:\Program Files\'
       - name: Test h5ls
         run: |
+          gci env:* | sort-object name
           cd 'C:\Program Files\HDF_Group\HDF5\1.14.5\bin\'
           dir
           & cmd /c ".\h5ls.exe -h"
