--- a/.github/workflows/mac-dmg.yml
+++ b/.github/workflows/mac-dmg.yml
@@ -1,4 +1,4 @@
-name: macOS DMG Installation and Run
+name: mac dmg
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   install-and-run:
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -15,9 +15,7 @@ jobs:
         run: curl -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5-macos14_clang.dmg -o app.dmg
 
       - name: Attach DMG file
-        run: |
-          hdiutil convert -quiet app.dmg -format UDTO -o bar
-          hdiutil attach -quiet -nobrowse -noverify -noautoopen -mountpoint /Volumes/app bar.cdr          
+        run: hdiutil attach app.dmg -mountpoint /Volumes/app
 
       - name: Test application
         run: /Volumes/app/HDF_Group/HDF5/1.14.5.2/bin/h5ls -h
