--- a/.github/workflows/win19-msi-icx.yml
+++ b/.github/workflows/win19-msi-icx.yml
@@ -2,7 +2,7 @@ name: win19 msi icx
 
 on:
   push:
-    branches: main-
+    branches: main
 
 env:
   WINDOWS_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/e83a8e64-04fc-45df-85c6-c2208d03bdb5/w_BaseKit_p_2024.2.0.635_offline.exe
@@ -26,16 +26,6 @@ jobs:
           git clone --depth=1 https://github.com/oneapi-src/oneapi-ci.git oneapi-ci
           cd oneapi-ci
           scripts/install_windows.bat ${{ env.WINDOWS_HPCKIT_URL }} ${{ env.WINDOWS_CPP_COMPONENTS }}:${{ env.WINDOWS_FORTRAN_COMPONENTS }}
-      - name: Configure oneAPI
-        shell: cmd
-        run: |
-          set LIB=C:\Program Files (x86)\Intel\oneAPI\mpi\2021.13\lib;C:\Program Files (x86)\Intel\oneAPI\compiler\2024.2\lib;%LIB%
-          set LIBPATH=C:\Program Files (x86)\Intel\oneAPI\mpi\latest\lib;C:\Program Files (x86)\Intel\oneAPI\compiler\2024.2\lib;%LIBPATH%
-          set SETVARS="%ProgramFiles(x86)%\Intel\oneAPI\setvars.bat"
-          call %SETVARS%
-          curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5-win-vs2022_intel.msi
-          misexec /i snapshot-1.14.5-win-vs2022_intel.msi
-          "C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls"
       - name: Install MSI
         run: |
           $file = "snapshot-1.14.5-win-vs2022_intel.msi"
@@ -45,6 +35,14 @@ jobs:
           $procMain.WaitForExit()
           $procLog.Kill()
           dir 'C:\Program Files\'
+      - name: Configure oneAPI
+        shell: cmd
+        run: |
+          set LIB=C:\Program Files (x86)\Intel\oneAPI\mpi\2021.13\lib;C:\Program Files (x86)\Intel\oneAPI\compiler\2024.2\lib;%LIB%
+          set LIBPATH=C:\Program Files (x86)\Intel\oneAPI\mpi\latest\lib;C:\Program Files (x86)\Intel\oneAPI\compiler\2024.2\lib;%LIBPATH%
+          set SETVARS="%ProgramFiles(x86)%\Intel\oneAPI\setvars.bat"
+          call %SETVARS%
+          "C:\Program Files\HDF_Group\HDF5\1.14.5\bin\h5ls"
       - name: Test h5ls
         run: |
           gci env:* | sort-object name
