--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -2,7 +2,7 @@ name: sol gcc
 
 on:
   push:
-    branches: main-
+    branches: main
 
 defaults:
   run:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test
-        uses: vmactions/solaris-vm@v1
+        uses: vmactions/solaris-vm@5bfba0898fcc862923c54cba27d895f64e484dfc
         with:
           release: "11.4-gcc"
           usesh: true
