--- a/.github/workflows/arm64-lin-spack.yml
+++ b/.github/workflows/arm64-lin-spack.yml
@@ -26,6 +26,7 @@ jobs:
             apt-get install -q -y cmake
             apt-get install -q -y python3
             apt-get install -q -y xz-utils
+            apt-get install -q -y g++
           run: |
             echo ::set-output name=uname::$(uname -a)
             git clone https://github.com/spack/spack
