--- a/.github/workflows/arm64-win.yml
+++ b/.github/workflows/arm64-win.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
       - name: get
         run: |
-          curl -s -O -L  https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.zip
-          unzip -q snapshot-1.14.5.zip
+          curl -s -O -L  https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/hdf5-1.14.5.zip
+          unzip -q hdf5-1.14.5.zip
       - name: test
         run: |
-          cd  hdf5-1.14.5-2
+          cd  hdf5-1.14.5
           mkdir build
           cd build
           cmake -A ARM64 -DSITE:STRING=win.arm64 -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
