ci:alp,edge): add curl

--- a/.github/workflows/i386-alp-e-f.yml
+++ b/.github/workflows/i386-alp-e-f.yml
@@ -20,6 +20,7 @@ jobs:
             build-base
             libgit2-dev
             cmake
+            curl
             gcc
             gfortran
       - name: run script
