ci(alp-e): auto

--- a/.github/workflows/i386-alp-e-auto-f.yml
+++ b/.github/workflows/i386-alp-e-auto-f.yml
@@ -1,9 +1,9 @@
-name: i386 alp e f
+name: i386 alp e auto f
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -19,7 +19,6 @@ jobs:
           packages: >
             build-base
             libgit2-dev
-            cmake
             curl
             gcc
             gfortran
@@ -29,13 +28,7 @@ jobs:
           curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/hdf5-1.14.5.tar.gz
           tar zxvf hdf5-1.14.5.tar.gz
           cd hdf5-1.14.5
-          mkdir build
-          cd build
-          cmake -DSITE:STRING=alp-e.i386 \
-            -DBUILDNAME:STRING="5/r/f" \
-            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_FORTRAN=ON \
-             ..
-          ctest -D Experimental -C Release
+          ./configure --enable-fortran --enable-hl --enable-shared --enable-cxx 
+          make
+	  make check
         shell: alpine.sh --root {0}
