ci(obsd.arm64): rm output-on-error

--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -38,7 +38,12 @@ jobs:
             sudo pkg_add cmake
             mkdir build
             cd build
-            cmake -DCMAKE_BUILD_TYPE=Debug \
-            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
-            ctest -T Build --output-on-error -j
-            ctest -T Test --output-on-error -j
+            cmake \
+            -DBUILDNAME:STRING="r" \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+            -DSITE:STRING=obsd.arm64 \
+            ..
+            ctest -D Experimental -C Release
