--- a/.github/workflows/fbsd-j-ae.yml
+++ b/.github/workflows/fbsd-j-ae.yml
@@ -42,6 +42,7 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             -DHDF5_BUILD_JAVA:BOOL=ON \
+            -DLIBAEC_USE_LOCALCONTENT:BOOL=ON \
             -DSITE:STRING=fbsd \
             ..
             ctest -D Experimental -C Release
