ci(fbsd): check /usr/port

--- a/.github/workflows/fbsd-j-sz.yml
+++ b/.github/workflows/fbsd-j-sz.yml
@@ -25,6 +25,7 @@ jobs:
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
+            ls /usr/ports
             sudo pkg update
             sudo pkg install -y cmake
             sudo pkg install -y libszip
