--- a/.github/workflows/fbsd-j-sz.yml
+++ b/.github/workflows/fbsd-j-sz.yml
@@ -43,7 +43,10 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="j/sz-en" \
+            -DBUILDNAME:STRING="r-sh+st/j/sz-en" \
+            -DBUILD_SHARED_LIBS:BOOL=OFF \
+            -DBUILD_STATIC_LIBS:BOOL=ON \
+            -DHDF5_BUILD_STATIC_TOOLS:BOOL=ON \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             -DHDF5_BUILD_JAVA:BOOL=ON \
